--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "email": "haikaladha1996@gmail.com",
     "url": "https://github.com/hikaru150s"
   },
+  "license": "MIT",
+  "repository": "https://github.com/hikaru150s/cygnus",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -28,7 +30,7 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "@nebular/auth": "^4.6.0",
-    "@nebular/eva-icons": "4.3.1",
+    "@nebular/eva-icons": "^4.6.0",
     "@nebular/security": "^4.6.0",
     "@nebular/theme": "^4.6.0",
     "@swimlane/ngx-charts": "^13.0.0",
@@ -64,7 +66,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^10.14.22",
     "codelyzer": "^5.2.1",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
